# pixelsig

./: CMakeLists.txt  build.sh  code.cpp  pixelsig.hpp  readme  simple_bilinearity.cpp  simple_boost.cpp  simple_curve_element.cpp  simple_fields.cpp  simple_sha1tests.cpp
data/: default_params.json
example/: signature.cpp
include/: base_converter.h  curve_point_decode.hpp  curve_point_encode.hpp  curve_point_print.hpp  default_params.hpp  pixel_key_type.hpp  pixel_msg_type.hpp  pixel_params_type.hpp  pixel_signature_scheme.hpp  pixel_signature_type.hpp  pixelsig.hpp  random_params.hpp  util.hpp
test/: test.cpp
util/: base_converter.cpp  basic_test.cpp  generate_params.cpp  simple_bilinearity.cpp
